<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.zxy.jisuloan.view.widget.RoundShadowLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:radius="6dp"
        app:shadowColor="@color/color_1a"
        app:shadowRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_003"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                style="@style/txt_yy_14"
                android:layout_gravity="center_horizontal"
                android:text="@string/str89"
                android:textStyle="bold" />


            <TextView
                style="@style/txt_33_14"
                android:layout_marginTop="20dp"
                android:text="@string/str90"
                android:textStyle="bold" />

            <TextView
                style="@style/txt_33_12"
                android:layout_marginTop="6dp"
                android:text="@string/str91" />

            <TextView
                style="@style/txt_33_14"
                android:layout_marginTop="20dp"
                android:text="@string/str92"
                android:textStyle="bold" />

            <TextView
                style="@style/txt_33_12"
                android:layout_marginTop="6dp"
                android:text="@string/str93" />

            <TextView
                style="@style/txt_33_14"
                android:layout_marginTop="20dp"
                android:text="@string/str94"
                android:textStyle="bold" />

            <TextView
                style="@style/txt_33_12"
                android:layout_marginTop="6dp"
                android:text="@string/str95" />

            <TextView
                style="@style/txt_33_14"
                android:layout_marginTop="20dp"
                android:text="@string/str96"
                android:textStyle="bold" />

            <TextView
                style="@style/txt_33_12"
                android:layout_marginTop="6dp"
                android:text="@string/str97" />

        </LinearLayout>
    </com.zxy.jisuloan.view.widget.RoundShadowLayout>

</LinearLayout>