<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.zxy.jisuloan.view.widget.RoundShadowLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:radius="6dp"
        app:shadowColor="@color/color_1a"
        app:shadowRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_003"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                style="@style/txt_yy_14"
                android:layout_gravity="center_horizontal"
                android:text="@string/str85"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/txt_66_14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/icon_sfz"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:text="@string/str86" />

                <TextView
                    style="@style/txt_66_14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/icon_sjh"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:text="@string/str87" />

                <TextView
                    style="@style/txt_66_14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/icon_yhk"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:text="@string/str88" />
            </LinearLayout>
        </LinearLayout>

    </com.zxy.jisuloan.view.widget.RoundShadowLayout>

</LinearLayout>