<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_F8"
    android:orientation="vertical">

    <include layout="@layout/include_public_title_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/txt_33_15"
            android:layout_marginTop="20dp"
            android:text="@string/str27" />

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginTop="18dp"
            android:src="@mipmap/icon_wc" />

        <TextView
            style="@style/txt_66_13"
            android:layout_marginTop="15dp"
            android:text="@string/str28" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:background="@color/white"
        android:divider="@drawable/line_fengexian"
        android:dividerHeight="1dp"
        android:overScrollMode="never"
        android:paddingStart="15dp"
        android:paddingTop="23dp"
        android:paddingEnd="15dp"
        android:scrollbars="none" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:background="@color/white">

        <Button
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:background="@drawable/shape_023"
            android:text="@string/str29"
            android:textColor="@color/blue_2" />
    </RelativeLayout>
</LinearLayout>